Resume Spacing and Image Fixed, Header Image Added
Redone after GIT broke....

--- a/css/creative.css
+++ b/css/creative.css
@@ -157,7 +157,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/header.jpg');
+  background-image: url('../img/header_chiron.jpg');
   text-align: center;
   color: white;
 }
@@ -227,12 +227,6 @@ header .header-content .header-content-inner p {
   max-width: 650px;
   margin: 0 auto;
 }
-.portfolio-full-box {
-  position: relative;
-  display: block;
-  max-width: 100%;
-  margin: 0 auto;
-}
 .portfolio-box .portfolio-box-caption {
   color: white;
   opacity: 0;
@@ -273,6 +267,56 @@ header .header-content .header-content-inner p {
 .portfolio-box:focus {
   outline: none;
 }
+
+.portfolio-full-box {
+  position: relative;
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
+}
+.portfolio-full-box .portfolio-box-caption {
+  color: white;
+  opacity: 0;
+  display: block;
+  background: rgba(41, 121, 243, 0.8); /*Changes the Tint Of the Photo Gallary Mouse Over*/
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.35s;
+  -moz-transition: all 0.35s;
+  transition: all 0.35s;
+}
+.portfolio-full-box .portfolio-box-caption .portfolio-box-caption-content {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.portfolio-full-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
+.portfolio-full-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  padding: 0 15px;
+}
+.portfolio-full-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 14px;
+}
+.portfolio-full-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
+  font-size: 18px;
+}
+.portfolio-full-box:hover .portfolio-box-caption {
+  opacity: 1;
+}
+.portfolio-full-box:focus {
+  outline: none;
+}
+
+
+
 @media (min-width: 768px) {
   .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
     font-size: 16px;
